--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		}
 	],
 	"require": {
-		"php": ">=5.3.0","daylerees/kurenai": "dev-master"
+		"php": ">=5.3.0",
+		"daylerees/kurenai": "dev-master"
 	},
 	"require-dev": {
 		"mockery/mockery": "dev-master"
